Sun Jun 29 16:49:11 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (search_method, remove_method, error_print, rb_alias)
	  (rb_eval, rb_rescue2, search_required, Init_eval, rb_thread_create),
	  gc.c (rb_source_filename, Init_stack), io.c (rb_io_getline),
	  parse.y (rb_id2name, rb_parser_free): suppress warnings.

Sat Jun 28 19:26:43 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* class.c (clone_method): use rb_copy_node_scope.
	  fixed [ruby-list:45102]
	  fixed [ruby-core:17393]

Sat Jun 28 19:25:56 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_copy_node_scope), node.h: Rename from copy_node_scope
	  and export.

Fri Jun 27 17:38:21 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/zlib/zlib.c (rb_deflate_initialize, Init_zlib): Fix up
	  initialize_copy; [ruby-list:45016], [ruby-list:45018].

Fri Jun 27 17:28:39 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_open_file, rb_io_s_sysopen): fmode should be unsigned int.
	  fixed [ruby-dev:34979]

Fri Jun 27 17:20:40 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.h: include ws2tcpip.h. fixed [ruby-Bugs-20528]

Fri Jun 27 15:57:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_iconv): fixed backport miss.
	  [ruby-core:17115]

Fri Jun 27 15:57:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_iconv): fix for length argument and now
	  allows range.  [ruby-core:17092]

Tue Jun 24 15:38:52 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (ERB::Compiler::TrimScanner#explicit_trim_line): Fix 
	  without strscan problems. [ruby_core:17028].

	* test/erb/test_erb.rb (TestERBCoreWOStrScan): Add test class for 
	  without strscan.

Sun Jun 22 00:09:20 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/delegate.rb (DelegateClass, Delegator#respond_to?):
	  respond_to? should now take optional second argument; submitted
	  by Jeremy Kemper <jeremy at bitsweat.net> in [ruby-core:17045].
